syntax = "proto2";
option java_package = "fk.prof.userapi.proto";
option java_outer_classname = "LoadInfoEntities";

message NodeLoadInfo {
    required uint32 profilesLoaded = 1;
}

message ProfileResidencyInfo {
    enum LoadStatus {
    	Loaded = 0;
    	Loading = 1;
    }
    required string ip = 1;
    required uint32 port = 2;
    required LoadStatus status = 3;
}
